--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "styles": [
               "src/scss/custom.scss"
             ],
-            "scripts": []
+            "scripts": [
+             ]
           },
           "configurations": {
             "production": {
@@ -98,9 +99,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/scss/custom.scss"
-            ],
+            "styles": [],
             "scripts": []
           }
         }
