set col classes

--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/scss/custom.scss"
+              "src/scss/custom.scss",
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+
             ],
             "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
              ]
           },
           "configurations": {
