--- a/package.json
+++ b/package.json
@@ -20,10 +20,18 @@
     "@angular/router": "~12.1.0-",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.2.0",
+    "@ngx-loading-bar/core": "^5.1.2",
+    "@ngx-loading-bar/http-client": "^5.1.2",
+    "ag-grid-angular": "^25.3.0",
+    "ag-grid-community": "^25.3.0",
     "bootstrap": "^5.0.2",
     "core-js": "^3.15.1",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
+    "ngx-order-pipe": "^2.1.1",
+    "ngx-toasta": "^2.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
